# shaper-sync

./: .gitignore  .releaserc.json  Dockerfile  LICENSE  README.md  pyproject.toml  shaper_sync.py
.github/workflows/: release.yml
